--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ body, h1, h2, p, a {
 .header {
   width: 100%;
   display: grid;
-  grid-template-columns: 200px 1fr 200px;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   padding: 16px 24px;
   border-bottom: 1px solid var(--border);
@@ -27,18 +27,18 @@ body, h1, h2, p, a {
 .header-left,
 .header-right {
   display: flex;
-  gap: 24px;
+  gap: 16px;
   align-items: center;
-  width: 200px;
+  width: auto;
   flex-shrink: 0;
 }
 
 .header-left {
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .header-right {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 /* Dropdown Menu */
@@ -149,7 +149,7 @@ body, h1, h2, p, a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
+ /* width: 32px; */
   height: 32px;
   border-radius: 4px;
   transition: all 0.3s ease;
@@ -186,3 +186,4 @@ body, h1, h2, p, a {
     height: 52px;
   }
 }
+
