--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -272,18 +272,18 @@ import news from "../data/news.json";
           </div>
         ))}
       </div>
-      <div class="artist-slide-navigation">
+      <div class="swiper-nav-wrapper">
         <button class="artist-slide-nav-btn prev" aria-label="Previous artist">
           <img src="/images/icons/arrow_left.svg" alt="Previous artist" class="nav-icon" />
         </button>
+        <div class="artists-slideshow-indicators">
+          {artists.map((_, i) => (
+            <button class="artist-indicator" data-slide={i} aria-label={`Go to artist ${i + 1}`}></button>
+          ))}
+        </div>
         <button class="artist-slide-nav-btn next" aria-label="Next artist">
           <img src="/images/icons/arrow_right.svg" alt="Next artist" class="nav-icon" />
         </button>
-      </div>
-      <div class="artists-slideshow-indicators">
-        {artists.map((_, i) => (
-          <button class="artist-indicator" data-slide={i} aria-label={`Go to artist ${i + 1}`}></button>
-        ))}
       </div>
     </section>
 
@@ -307,18 +307,18 @@ import news from "../data/news.json";
           </div>
         ))}
       </div>
-      <div class="slide-navigation">
+      <div class="swiper-nav-wrapper">
         <button class="slide-nav-btn prev" aria-label="Previous slide">
           <img src="/images/icons/arrow_left.svg" alt="Previous slide" class="nav-icon" />
         </button>
+        <div class="slideshow-indicators">
+          {releases.map((_, i) => (
+            <button class="indicator" data-slide={i} aria-label={`Go to slide ${i + 1}`}></button>
+          ))}
+        </div>
         <button class="slide-nav-btn next" aria-label="Next slide">
           <img src="/images/icons/arrow_right.svg" alt="Next slide" class="nav-icon" />
         </button>
-      </div>
-      <div class="slideshow-indicators">
-        {releases.map((_, i) => (
-          <button class="indicator" data-slide={i} aria-label={`Go to slide ${i + 1}`}></button>
-        ))}
       </div>
     </section>
 
