--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -29,7 +29,7 @@ const pages = [
       <div class="header-left">
         <a href="https://instagram.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Instagram">
           <img
-            src="/images/instagram.svg"
+            src="/images/icons/instagram.svg"
             alt="Instagram"
             width="32"
             height="32"
@@ -64,7 +64,7 @@ const pages = [
       <div class="header-right">
         <a href="https://soundcloud.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="SoundCloud">
           <img
-            src="/images/soundcloud.svg"
+            src="/images/icons/soundcloud.svg"
             alt="SoundCloud"
             width="32"
             height="32"
